--- a/app/assets/stylesheets/_chat-header.scss
+++ b/app/assets/stylesheets/_chat-header.scss
@@ -5,19 +5,19 @@
   justify-content: space-between;
   padding-right: 40px;
   padding-left: 40px;
-  .chat__header-group-info{
-    .chat__header-group-title{
+  &-group{
+    &-title{
       font-size: 20px;
       color: #333333;
       margin-top:35px;
       margin-bottom:15px;
     }
-    .chat__header-group-member{
+    &-member{
       font-size: 12px;
       color: #999999;
     }
   }
-  .chat__header-edit-button{
+  &-edit-button{
     color: #38aef0;
     height: 38px;
     text-align: center;
