--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,7 @@
 @import "./reset";
 @import "font-awesome";
-.flash-message{
-  background-color: #38aef0;
-  color: #ffffff;
-  text-align: center;
-  font-size: 14px;
-}
+@import "./flash";
+
 .container{
   display: flex;
   @import "./sidebar";
