--- a/app/assets/stylesheets/_chat-footer.scss
+++ b/app/assets/stylesheets/_chat-footer.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding-left: 40px;
   padding-right: 40px;
-  .chat__footer-form{
+  &-form{
     position: relative;
     .upload-label{
       position: absolute;
@@ -29,7 +29,7 @@
       display: none;
     }
   }
-  .chat__footer-send-button{
+  &-send-button{
     background-color:#38aef0;
     height: 50px;
     width: 100px;
