--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -1,10 +1,10 @@
 .sidebar{
   width: 300px;
   height: 100vh;
-  .sidebar__user{
+  &__user{
     background-color: #253141;
     height: 15%;
-    .sidebar__user-content{
+    &-content{
       padding-right: 20px;
       padding-left: 20px;
       display: flex;
@@ -25,10 +25,10 @@
       }
     }
   }
-  .sidebar__group{
+  &__group{
     background-color: #2f3e51;
     height: 85%;
-    .sidebar__group-list{
+    &-list{
       padding-right: 20px;
       padding-left: 20px;
       .sidebar__group-info{
