font-awesomeにfa_iconを使用

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -17,7 +17,7 @@
         line-height: 100px;
       }
       .sidebar__user-menu-icon{
-        .fa{
+        .icon{
           color: #ffffff;
           line-height: 100px;
           vertical-align:middle;
