Deviseの導入,userモデルの作成,フラッシュメッセージの実装,groupsコントローラーの作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,10 @@
-@import "./reset";
+@import "modules/reset";
 @import "font-awesome";
-@import "./flash";
+@import "modules/flash";
+@import "config/colors";
 
 .container{
   display: flex;
-  @import "./sidebar";
-  @import "./chat"
+  @import "modules/sidebar";
+  @import "modules/chat"
 }
