--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,15 +1,16 @@
-%p.flash-message チャットグループが作成されました。
 .container
   .sidebar
     .sidebar__user
       .sidebar__user-content
         %p.sidebar__user-name
-          テストユーザー
-        .sidebar__user-menu-icon
-          %a.sidebar__user-create-group{href: ""}
-            = fa_icon "edit",class: 'icon'
-          %a.sidebar__user-edit-user{href: ""}
-            = fa_icon "cog",class: 'icon'
+          = current_user.name
+        %ul.sidebar__user-menu-icon
+          %li.sidebar__user-create-group
+            = link_to do
+              = fa_icon "edit",class: 'icon'
+          %li.sidebar__user-edit-user
+            = link_to edit_user_path(current_user) do
+              = fa_icon "cog",class: 'icon'
     .sidebar__group
       .sidebar__group-list
         %a
