--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 @import "font-awesome";
 @import "modules/flash";
 @import "config/colors";
+@import "modules/group";
+@import "modules/user";
 
 .container{
   display: flex;
