--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,7 +6,7 @@
           = current_user.name
         %ul.sidebar__user-menu-icon
           %li.sidebar__user-create-group
-            = link_to do
+            = link_to new_group_path do
               = fa_icon "edit",class: 'icon'
           %li.sidebar__user-edit-user
             = link_to edit_user_path(current_user) do
