--- a/app/assets/stylesheets/modules/_sidebar.scss
+++ b/app/assets/stylesheets/modules/_sidebar.scss
@@ -1,22 +1,23 @@
 .sidebar{
   width: 300px;
   height: 100vh;
-  &__user{
+  .header{
     background-color: #253141;
     height: 15%;
-    &-content{
+    &__content{
       padding-right: 20px;
       padding-left: 20px;
       display: flex;
       justify-content: space-between;
-      .sidebar__user-name{
+      .user-name{
         font-size: 16px;
         font-weight: bold;
         color: #ffffff;
         vertical-align:middle;
         line-height: 100px;
       }
-      .sidebar__user-menu-icon{
+      .user-menu{
+        display: flex;
         .icon{
           color: #ffffff;
           line-height: 100px;
@@ -25,24 +26,21 @@
       }
     }
   }
-  &__group{
+  .groups {
     background-color: #2f3e51;
-    height: 85%;
-    &-list{
-      padding-right: 20px;
-      padding-left: 20px;
-      .sidebar__group-info{
-        padding-top: 40px;
-        padding-bottom: 20px;
-        .sidebar__group-name{
-          font-size: 15px;
-          color: #ffffff;
-          margin-bottom: 5px;
-        }
-        .sidebar__group-message{
-          font-size: 11px;
-          color: #ffffff
-        }
+    height: calc(100vh - 100px);
+    padding: 0 20px;
+    .group {
+      box-sizing: border-box;
+      padding: 20px 0 40px;
+      &__name {
+        color: #ffffff;
+        font-size: 15px;
+      }
+      &__message {
+        color: #ffffff;
+        font-size: 11px;
+        margin-top: 5px;
       }
     }
   }
