--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,24 +1,5 @@
 .container
-  .sidebar
-    .sidebar__user
-      .sidebar__user-content
-        %p.sidebar__user-name
-          = current_user.name
-        %ul.sidebar__user-menu-icon
-          %li.sidebar__user-create-group
-            = link_to new_group_path do
-              = fa_icon "edit",class: 'icon'
-          %li.sidebar__user-edit-user
-            = link_to edit_user_path(current_user) do
-              = fa_icon "cog",class: 'icon'
-    .sidebar__group
-      .sidebar__group-list
-        %a
-          .sidebar__group-info
-            %p.sidebar__group-name
-              テストグループ
-            %p.sidebar__group-message
-              テスト
+  = render 'shared/side_bar'
   .chat
     .chat__header
       .chat__header-group-info
