add overflow-property to message-content and header-height % → px

--- a/app/assets/stylesheets/modules/_chat-footer.scss
+++ b/app/assets/stylesheets/modules/_chat-footer.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   padding-left: 40px;
   padding-right: 40px;
+  position: relative;
   .form{
     .new_message{
       //form_forのスタイル
