--- a/app/assets/stylesheets/modules/_chat-content.scss
+++ b/app/assets/stylesheets/modules/_chat-content.scss
@@ -1,9 +1,11 @@
 .chat__content{
   padding-right: 40px;
   padding-left: 40px;
-  height: calc( 100vh - 15% - 90px);
+  height: calc(100vh - 100px - 90px);
+  overflow: auto;
   &-message-list{
     padding-top: 46px;
+
     .chat__content-message{
       margin-bottom: 40px;
       &-name{
