--- a/app/assets/stylesheets/modules/_chat-header.scss
+++ b/app/assets/stylesheets/modules/_chat-header.scss
@@ -1,10 +1,16 @@
 .chat__header{
+  // display: flex;
+  // height: 15%;
+  // border-bottom: 1px solid #eeeeee;
+  // justify-content: space-between;
+  // padding-right: 40px;
+  // padding-left: 40px;
+  height: 100px;
+  border: #eeeeee solid 1px;
+  padding: 0 40px;
   display: flex;
-  height: 15%;
-  border-bottom: 1px solid #eeeeee;
+  box-sizing: border-box;
   justify-content: space-between;
-  padding-right: 40px;
-  padding-left: 40px;
   &-group{
     &-title{
       font-size: 20px;
