--- a/app/assets/stylesheets/modules/_sidebar.scss
+++ b/app/assets/stylesheets/modules/_sidebar.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   .header{
     background-color: #253141;
-    height: 15%;
+    height: 100px;
     &__content{
       padding-right: 20px;
       padding-left: 20px;
