--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,9 +4,11 @@
     .chat__header
       .chat__header-group-info
         %p.chat__header-group-title
-          テストグループ
+          #{@group.name}
         %p.chat__header-group-member
-          テストグループ:テストユーザー
+          MEMBER:
+          - @group.users.each do |user|
+            #{user.name}
       %a.chat__header-edit-button
 
     .chat__content
