--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -13,13 +13,15 @@
 
     .chat__content
       .chat__content-message-list
-        .chat__content-message
-          %p.chat__content-message-name
-            テストユーザー
-            %span.chat__content-message-time
-              2018/10/17 00:00:00
-          %p.chat__content-message-body
-            テスト
+
+        - @messages.each do |message|
+          .chat__content-message
+            %p.chat__content-message-name
+              #{message.user.name}
+              %span.chat__content-message-time
+                #{message.created_at}
+            %p.chat__content-message-body
+              #{message.content}
     .chat__footer
       .form
         = form_for [@group, @message], html: {id: 'new__message'} do |f|
