--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -2,7 +2,7 @@
   %p.chat__content-message-name
     #{message.user.name}
     %span.chat__content-message-time
-      #{message.created_at(:default)}
+      #{message.created_at.to_s(:default)}
   %p.chat__content-message-body
     #{message.content}
   .image
