add overflow property to sidebar

--- a/app/assets/stylesheets/modules/_sidebar.scss
+++ b/app/assets/stylesheets/modules/_sidebar.scss
@@ -30,6 +30,7 @@
     background-color: #2f3e51;
     height: calc(100vh - 100px);
     padding: 0 20px;
+    overflow: auto;
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
