--- a/app/assets/stylesheets/modules/_sidebar.scss
+++ b/app/assets/stylesheets/modules/_sidebar.scss
@@ -30,9 +30,13 @@
     background-color: #2f3e51;
     height: calc(100vh - 100px);
     padding: 0 20px;
+    overflow: auto;
     .group {
       box-sizing: border-box;
       padding: 20px 0 40px;
+      &__link{
+        text-decoration: none;
+      }
       &__name {
         color: #ffffff;
         font-size: 15px;
